# fu-gml-seminars-public

./: .gitignore  README.md  pyproject.toml
01_intro/: 01_intro_Фамилия_Имя_Группа.ipynb  01_loading_data.ipynb
02_models/: 02_models_Фамилия_Имя_Группа.ipynb
02_models/src/: degree_tools.py
03_community/: 03_community_Фамилия_Имя_Группа.ipynb
03_community/data/: communities.edgelist
03_community/src/: color_tools.py
04_random_walk/: 04_random_walk_Фамилия_Имя_Группа_v2.ipynb
